# Swagbucks-Survey-Bot

./: .gitignore  README.md  pyproject.toml
config/: authorized.example.json  profile.json
surveybot/: __init__.py  adapters.py  cli.py  config.py  logger.py  mock_server.py  navigator.py  question_handler.py  safety.py  training.py
tests/: test_config.py  test_mock_server.py  test_playwright_flow.py  test_question_handler.py  test_safety.py  test_training.py
